fixing footer alignment

--- a/_sass/minima/custom-styles.scss
+++ b/_sass/minima/custom-styles.scss
@@ -44,5 +44,6 @@
 }
 
 .footer-col-right {
-    text-align: right;
+    margin-left: auto;
+    margin-right: 0;
 }
